_sass/stk-wiki/stk-wiki-content.scss
/* article_main_title css */
.article_main_title {
    background-color: #D7D7CB;
    text-align: center;
    color: #5d5d5d;
    /*padding-top: 1px;
    padding-bottom: 1px;*/
}

/* article_minor_title css */
.article_minor_title
{
margin-left: 20%;
margin-right: 20%;
background-color: #7ec283;
text-align: center;
color: #232627;
}

/* popup_code */
.popup-code-line {
    padding: 5px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: #18262b;
    font-family: monospace;
    color: #fff;
    overflow: auto;
}
.popup-code-info {
    background-color: #2f4a53;
    padding: 10px;
    padding-left: 20px;
    color: #fff;
}

/* popup_prerequisite */
.popup-content-prerequisite {
    padding: 5px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: #fdbc4b;
}
.popup-header-prerequisite {
    background-color: #f47750;
    padding: 10px;
    padding-left: 20px;
}

/* popup_warning css */
.popup-content {
    padding: 5px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: #a3cfd4;
}
.popup-info {
    background-color: #7eacc2;
    padding: 10px;
    padding-left: 20px;
}

/* generic css */
.article_date {
    color: #3d3d3d;
    font-size: 12px;
}

.character_presentation_small {
   width: 50%;
}

@media only screen and (max-width: 480px) {
    .character_presentation_small {
        display: block;
        height: auto;
    }
}

@media only screen and (max-width: 800px) {
    .character_presentation_small {
        display: block;
        width: 100%;
        height: auto;
    }
}

.character_container caption {
    background-color: #7ec283;
    padding-top: 1px;
    padding-bottom: 1px;
    font-weight: bold;
    width: 100%;
}

.character_description{
    margin-left: 20px;
    margin-right: 20px;
    width: 100%;
}

.os_link_description{
    width: 100%;
    font-size: 15px;
}

.os_link_container{
    padding-left: 20px;
    padding-right: 20px;
    background-color: #83bece;
    /*border-style: solid;
    border-width: 5px;
    border-color: #83bece;*/
}

.os_link_container :hover{
    background-color: #9ccbd8;
}

/* css for table of contents toggle */
input[id="markdown-callback"] { display: none; }
input[id="markdown-callback"] + #markdown-toggle:after { content: attr(data-hide-text); }
input[id="markdown-callback"]:checked + #markdown-toggle:after { content: attr(data-show-text); }
input[id="markdown-callback"]:checked + #markdown-toggle + span + #markdown-toc {
    font-size: 0;
    opacity: 0;
    transition: opacity 0.1s, font-size 0.25s 0.1s;
    user-select: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

#markdown-toc {
    margin: 0;
    transition: font-size 0.1s, opacity 0.25s 0.1s;
    user-select: text;
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
}

span[id="markdown-opening-bracket"]:before {
    content: '[';
}

span[id="markdown-closing-bracket"]:before {
    content: ']';
}

#markdown-toggle {
    cursor: pointer;
    color: #2d9f00;
}

/* css for qa (question and answer) tag */
.qa-question {
    display: block;
    width: 100%;
    cursor: pointer;
    padding: 3px;
    background-color: transparent;
    color: #414141;
    border-bottom: 5px solid #bdd3a8;
    border-top: 5px solid transparent;
}

.qa-question:hover {
    border-bottom: 5px solid #88b675;
    border-top: 5px solid #88b675;
    background-color: #88b675;
}

.qa-answer {
    margin: 0;
    padding: 0;
    font-size: 0;
    opacity: 0;
    transition: opacity 0.25s, font-size 0.25s 0.25s, padding 0.25s 0.25s, margin 0.25s 0.25s;
    user-select: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

#art_portal_nav
{
    background-color: rgba(0, 0, 0, 0.9);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 15px;
    padding-left: 15px;
}

.art_portal_nav_item
{
    display: flex;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: auto;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

.art_portal_nav_text a
{
    color: white;
    font-weight: bold;
    transition: color .15s;
}

.art_portal_nav_text a:hover
{
    color: orange;
}

#special_return_to_art_portal
{
    background-color: #16a085;
    padding-right: 20px;
    margin-right: 5px;
}

#code_portal_nav
{
    background-color: rgba(0, 0, 0, 0.9);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 15px;
    padding-left: 15px;
}

.code_portal_nav_item
{
    display: flex;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: auto;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

.code_portal_nav_text a
{
    color: white;
    font-weight: bold;
    transition: color .15s;
}

.code_portal_nav_text a:hover
{
    color: orange;
}

#special_return_to_code_portal
{
    background-color: #16a085;
    padding-right: 20px;
    margin-right: 5px;
}

